Makes rellic independent of remill

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,13 +12,20 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# Fix behavior of CMAKE_CXX_STANDARD when targeting macOS.
+if (POLICY CMP0025)
+  cmake_policy(SET CMP0025 NEW)
+endif ()
+
 project(rellic)
 cmake_minimum_required(VERSION 3.2)
 
 include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/settings.cmake")
 include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/utils.cmake")
 
-# FindAndSelectClangCompiler()
+FindAndSelectClangCompiler()
+
+enable_language(C CXX ASM)
 
 set(RELLIC_SOURCE_DIR "${PROJECT_SOURCE_DIR}")
 
@@ -35,28 +42,6 @@ endif()
 
 list(APPEND PROJECT_INCLUDEDIRECTORIES ${CMAKE_CURRENT_BINARY_DIR})
 
-#
-# target settings
-#
-
-set(RELLIC_DECOMP rellic-decomp-${REMILL_LLVM_VERSION})
-
-add_executable(${RELLIC_DECOMP}
-  
-  rellic/AST/CondBasedRefine.cpp
-  rellic/AST/DeadStmtElim.cpp
-  rellic/AST/GenerateAST.cpp
-  rellic/AST/IRToASTVisitor.cpp
-  rellic/AST/LoopRefine.cpp
-  rellic/AST/NestedCondProp.cpp
-  rellic/AST/NestedScopeCombiner.cpp
-  rellic/AST/Util.cpp
-  rellic/AST/Z3CondSimplify.cpp
-  rellic/AST/Z3ConvVisitor.cpp
-  
-  tools/decomp/Decomp.cpp
-)
-
 # this is needed for the #include directives with absolutes paths to work correctly; it must
 # also be set to PUBLIC since rellic-lift includes some files directly
 list(APPEND PROJECT_INCLUDEDIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR})
@@ -64,17 +49,6 @@ list(APPEND PROJECT_INCLUDEDIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR})
 #
 # libraries
 #
-
-# remill
-if(NOT TARGET remill)
-  if("${PLATFORM_NAME}" STREQUAL "windows")
-    set(REMILL_FINDPACKAGE_HINTS HINTS "${CMAKE_INSTALL_PREFIX}/remill/lib")
-  endif()
-
-  find_package(remill REQUIRED ${REMILL_FINDPACKAGE_HINTS})
-endif()
-
-list(APPEND PROJECT_LIBRARIES remill)
 
 # llvm
 find_package(LLVM REQUIRED CONFIG HINTS ${FINDPACKAGE_LLVM_HINTS})
@@ -110,6 +84,32 @@ list(APPEND PROJECT_LIBRARIES glog::glog)
 # gflags
 find_package(gflags REQUIRED)
 list(APPEND PROJECT_LIBRARIES gflags)
+
+#
+# target settings
+#
+
+set(RELLIC_LLVM_VERSION "${LLVM_MAJOR_VERSION}.${LLVM_MINOR_VERSION}")
+
+set(RELLIC_DECOMP rellic-decomp-${RELLIC_LLVM_VERSION})
+
+add_executable(${RELLIC_DECOMP}
+  
+  rellic/AST/CondBasedRefine.cpp
+  rellic/AST/DeadStmtElim.cpp
+  rellic/AST/GenerateAST.cpp
+  rellic/AST/IRToASTVisitor.cpp
+  rellic/AST/LoopRefine.cpp
+  rellic/AST/NestedCondProp.cpp
+  rellic/AST/NestedScopeCombiner.cpp
+  rellic/AST/Util.cpp
+  rellic/AST/Z3CondSimplify.cpp
+  rellic/AST/Z3ConvVisitor.cpp
+  
+  rellic/BC/Util.cpp
+  
+  tools/decomp/Decomp.cpp
+)
 
 #
 # target settings
