Makes some minor changes
* Changes include guards to pragma once
* Renames DeadStmtElim to StmtCombine to better reflect
  it's future use.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,7 +110,7 @@ add_executable(${RELLIC_DECOMP}
   rellic/AST/Compat/Expr.cpp
   
   rellic/AST/CondBasedRefine.cpp
-  rellic/AST/DeadStmtElim.cpp
+  rellic/AST/StmtCombine.cpp
   rellic/AST/GenerateAST.cpp
   rellic/AST/IRToASTVisitor.cpp
   rellic/AST/LoopRefine.cpp
