--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,7 +112,7 @@ add_executable(${RELLIC_DECOMP}
   rellic/AST/InferenceRule.cpp
   rellic/AST/DeadStmtElim.cpp
   rellic/AST/CondBasedRefine.cpp
-  rellic/AST/StmtCombine.cpp
+  rellic/AST/ExprCombine.cpp
   rellic/AST/GenerateAST.cpp
   rellic/AST/IRToASTVisitor.cpp
   rellic/AST/LoopRefine.cpp
