--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,5 @@ before_install:
   - ./scripts/travis.sh "$TRAVIS_OS_NAME" initialize
 
 script:
-  - pyenv install 3.7.1; pyenv global 3.7.1
+  - pyenv global 3.7.1
   - ./scripts/travis.sh "$TRAVIS_OS_NAME" build
