Add latest tag to docker image name in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,8 @@ jobs:
             -v $(pwd):/test -w /test \
             -u $(id -u):$(id -g) \
             --entrypoint /opt/rellic/libraries/llvm/bin/clang \
-           rellic-decomp -emit-llvm -c ./tests/tools/decomp/issue_4.c -o ./tests/tools/decomp/issue_4.bc
+            rellic-decomp:latest -emit-llvm -c ./tests/tools/decomp/issue_4.c -o ./tests/tools/decomp/issue_4.bc
         - docker run --rm -t \
             -v $(pwd):/test -w /test \
             -u $(id -u):$(id -g) \
-            rellic-decomp --input ./tests/tools/decomp/issue_4.bc --output /dev/stdout
+            rellic-decomp:latest --input ./tests/tools/decomp/issue_4.bc --output /dev/stdout
