--- a/.travis.yml
+++ b/.travis.yml
@@ -20,14 +20,11 @@ jobs:
     - services:
         - docker
       name: 'Docker build'
+      packages:
+        - clang-8
       script:
         - docker build -t rellic-decomp --build-arg LLVM_VERSION=8.0 .
-        - |
-          docker run --rm -t \
-            -v "$(pwd)":/test -w /test \
-            -u "$(id -u)":"$(id -g)" \
-            --entrypoint /opt/rellic/libraries/llvm/bin/clang \
-            rellic-decomp:latest -emit-llvm -c ./tests/tools/decomp/issue_4.c -o ./tests/tools/decomp/issue_4.bc
+        - clang-8 -emit-llvm -c ./tests/tools/decomp/issue_4.c -o ./tests/tools/decomp/issue_4.bc
         - |
           docker run --rm -t \
             -v "$(pwd)":/test -w /test \
