Use cxx-common docker base
* Base image is cxx-common
* Build Z3 in Dockerfile
* Create a build-only option to avoid downloading cxx-common
* Migrate to cmake -G Ninja versus makefiles

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ endif ()
 
 project(rellic)
 cmake_minimum_required(VERSION 3.2)
+set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules")
 
 include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/settings.cmake")
 include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/utils.cmake")
