--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        llvm: ["800", "900", "1000"]
+        llvm: ["800"]
         ubuntu: ["20.04", "19.10", "18.04"]
     steps:
     - uses: actions/checkout@v2
