--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,8 +14,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Native LLVM 8.0 on Ubuntu 18.04 Build
       run: |
-        sudo apt-get -qq update
-        sudo apt-get install -qqy ninja-build unzip curl libomp-dev libtinfo-dev lsb-release
+        sudo apt-get update
+        sudo apt-get install -y ninja-build unzip libomp-dev
         scripts/build.sh --llvm-version llvm800 --prefix /opt/trailofbits/rellic --use-host-compiler --extra-cmake-args "-DCMAKE_BUILD_TYPE=Release"
     - name: Test Rellic Build
       run: |
