--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,7 +74,7 @@ set(CLANG_LIBS clangIndex clangCodeGen clangASTMatchers clangTooling)
 list(APPEND PROJECT_LIBRARIES ${CLANG_LIBS})
 
 # z3
-find_package(Z3 REQUIRED HINTS ${Z3_INSTALL_PREFIX})
+find_package(Z3 HINTS ${Z3_INSTALL_PREFIX})
 if(Z3_FOUND)
   list(APPEND PROJECT_INCLUDEDIRECTORIES ${Z3_CXX_INCLUDE_DIRS})
   list(APPEND PROJECT_LIBRARIES ${Z3_LIBRARIES})
