Fix finding our Z3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,9 +74,10 @@ set(CLANG_LIBS clangIndex clangCodeGen clangASTMatchers clangTooling)
 list(APPEND PROJECT_LIBRARIES ${CLANG_LIBS})
 
 # z3
-find_package(Z3 HINTS ${Z3_INSTALL_PREFIX})
+set(LLVM_Z3_INSTALL_DIR "${Z3_INSTALL_PREFIX}")
+find_package(Z3 4.7.1 MODULE)
 if(Z3_FOUND)
-  list(APPEND PROJECT_INCLUDEDIRECTORIES ${Z3_CXX_INCLUDE_DIRS})
+  list(APPEND PROJECT_INCLUDEDIRECTORIES ${Z3_INCLUDE_DIR})
   list(APPEND PROJECT_LIBRARIES ${Z3_LIBRARIES})
 elseif (DEFINED Z3_INSTALL_PREFIX)
   # acquire OpenMP for z3
