--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        llvm: ["900", "1000", "1100"]
+        llvm: ["900", "1000"]
         ubuntu: ["20.04", "18.04"]
     steps:
     - uses: actions/checkout@v2
