--- a/rellic/CMakeLists.txt
+++ b/rellic/CMakeLists.txt
@@ -1,6 +1,8 @@
 add_library(${PROJECT_NAME} STATIC
-  AST/Compat/Stmt.cpp
+  AST/Compat/ASTContext.cpp
   AST/Compat/Expr.cpp
+  AST/Compat/Mangle.cpp
+  AST/Compat/Stmt.cpp
   
   AST/CXXToCDecl.cpp
   AST/InferenceRule.cpp
