--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ endif()
 
 project(rellic)
 cmake_minimum_required(VERSION 3.2)
-if (NOT DEFINED ENV{TRAILOFBITS_LIBRARIES})
+if (DEFINED ENV{TRAILOFBITS_LIBRARIES})
   set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules")
 endif()
 
